<resources>
    <string name="app_name">CampusHub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="campus_hub_name">CampusHub</string>
    <string name="campus_hub_image">Campus Hub Image</string>
    <string name="upcoming_events_text">Upcoming Events</string>
    <string name="northeaster_default">Default Northeastern Image</string>
    <string name="profile_text">Profile</string>
    <string name="events_text">Events</string>
    <string name="sign_out_text">Sign out</string>
    <string name="add_event_text">Add event</string>
    <string name="event_title">Event</string>
    <string name="register_text">Register</string>
    <string name="delete_text">Delete</string>
    <string name="edit_text">Edit</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="change_password_text">Change Password</string>
    <string name="account_text">Account</string>
    <string name="account_info_text">Account Info</string>
    <string name="search_hint_text">Search Organization Name...</string>
    <string name="calendar_text">Calendar</string>
    <string name="name_text">Name</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="club_text">Sign Up as Club</string>
    <string name="member_text">Sign Up as Member</string>
    <string name="login_text" />
    <string name="account_question_text">Have an account?</string>
    <string name="login">Login</string>
    <string name="Loginaccount_text">Login to your account</string>
    <string name="password_text">Password</string>
    <string name="login2_text">Login</string>
    <string name="newaccount">Create a new account</string>
    <string name="member_signup">Member Sign Up</string>
    <string name="email2_text">Email</string>
    <string name="password2">Password</string>
    <string name="login3">Login</string>
    <string name="orgainzation">Organization Sign Up</string>
    <string name="orgname">Organization Name</string>
    <string name="save_text">Save</string>
    <string name="profile_photo_text">Profile Photo</string>
    <string name="name_month_placeholder">Month</string>
    <string name="name_sun">SUN</string>
    <string name="name_mon">MON</string>
    <string name="name_tues">TUES</string>
    <string name="name_wed">WED</string>
    <string name="name_thur">THUR</string>
    <string name="name_fri">FRI</string>
    <string name="name_sat">SAT</string>
    <string name="name_day_placeholder">1</string>
    <string name="firstname">First Name</string>
    <string name="firstname2">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="lastname2">Last Name</string>
    <string name="register">Register</string>
    <string name="Register2">Register</string>
    <string name="registerclub">Register as a club</string>
    <string name="RegisterMember">Register as a member</string>
    <string name="email_text">Email</string>
    <string name="switchcam">Switch Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="Photo">Photo</string>
    <string name="retake">Retake</string>
    <string name="confirm">Confirm</string>
    <string name="jihi">PLACEHOLDERSTRING</string>
    <string name="editProfile2">Edit Profile</string>
    <string name="signout">Sign Out</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="editEmail">Email</string>
    <string name="sc">cs</string>
    <string name="calendar_view">Calendar View</string>
    <string name="add_edit_event_title">Add or Edit an Event</string>
    <string name="event_time_hint">Event time in 24hr format...</string>
    <string name="event_name_hint">Event name...</string>
    <string name="event_location_hint">Event location...</string>
    <string name="event_description_hint">Event description...</string>
    <string name="create_event_text">Create</string>
    <string name="name_month_day_placeholder">Day</string>
    <string name="search_icon_descrip">Search Icon</string>
    <string name="no_events_text">No Events Scheduled</string>
    <string name="app_info_paragraph_text">Thanks for using CampusHub!

This application was developed by Marko Krstulovic, Rishabh Sahu, and Alexander Les
for CS4520 Mobile App Development at Northeastern University under
Professor Sakib Miazi. </string>
    <string name="app_info_label_text">App Info</string>
</resources>