<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EditProfileConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.EditProfileFragment" >

    <ImageView
        android:id="@+id/imageView_camera"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/sc"
        android:src="@android:drawable/screen_background_dark_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_Firstname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_camera" />

    <EditText
        android:id="@+id/edit_lastName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edit_Firstname"
        app:layout_constraintStart_toStartOf="@+id/edit_Firstname"
        app:layout_constraintTop_toBottomOf="@+id/edit_Firstname" />

    <Button
        android:id="@+id/button_save_profile"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/campus_hub_color"
        android:text="@string/save_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_lastName"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/edit_lastName"
        app:layout_constraintTop_toBottomOf="@+id/edit_lastName" />
</androidx.constraintlayout.widget.ConstraintLayout>