<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemberSignUpFragment" >

    <ImageView
        android:id="@+id/memProfilePhoto"
        android:layout_width="115dp"
        android:layout_height="103dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/select_avatar"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/memberSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/member_signup"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/firstname"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/memberSignUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/memberSignUp"
        app:layout_constraintTop_toBottomOf="@+id/memberSignUp" />

    <TextView
        android:id="@+id/lastname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/lastname"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_firstname"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="@+id/editText_firstname"
        app:layout_constraintTop_toBottomOf="@+id/editText_firstname" />

    <EditText
        android:id="@+id/editText_firstname"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/firstname2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/firstname_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstname_text"
        app:layout_constraintTop_toBottomOf="@+id/firstname_text" />

    <EditText
        android:id="@+id/editText_lastname2"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/lastname2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/lastname_text"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="@+id/lastname_text"
        app:layout_constraintTop_toBottomOf="@+id/lastname_text" />

    <TextView
        android:id="@+id/email2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email2_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_lastname2"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="@+id/editText_lastname2"
        app:layout_constraintTop_toBottomOf="@+id/editText_lastname2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="example@mail.com"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/email2_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email2_text"
        app:layout_constraintTop_toBottomOf="@+id/email2_text" />

    <TextView
        android:id="@+id/password_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:text="@string/password2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="335dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/password_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_2"
        app:layout_constraintTop_toBottomOf="@+id/password_2" />

    <Button
        android:id="@+id/button_memRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/campus_hub_color"
        android:text="@string/Register2"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/memProfilePhoto"
        app:layout_constraintStart_toStartOf="@+id/memProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/memProfilePhoto" />
</androidx.constraintlayout.widget.ConstraintLayout>