<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingFragment" >

    <ImageView
        android:id="@+id/campusHubImage"
        android:layout_width="326dp"
        android:layout_height="322dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/campushub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_signupclub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/club_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campusHubImage"
        app:rippleColor="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/button_signupmemeber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/member_text"
        app:layout_constraintEnd_toEndOf="@+id/button_signupclub"
        app:layout_constraintStart_toStartOf="@+id/button_signupclub"
        app:layout_constraintTop_toBottomOf="@+id/button_signupclub" />

    <TextView
        android:id="@+id/account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/account_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_signupmemeber"
        app:layout_constraintStart_toStartOf="@+id/button_signupmemeber"
        app:layout_constraintTop_toBottomOf="@+id/button_signupmemeber" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/account_text"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/account_text"
        app:layout_constraintTop_toBottomOf="@+id/account_text" />
</androidx.constraintlayout.widget.ConstraintLayout>