<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrganizationSignUpFragment" >

    <Button
        android:id="@+id/button_login5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/login3"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword4"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="335dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/password_3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_3"
        app:layout_constraintTop_toBottomOf="@+id/password_3" />

    <TextView
        android:id="@+id/password_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/password2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress4" />

    <EditText
        android:id="@+id/editTextTextEmailAddress4"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="example@mail.com"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/email2_text3"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/email2_text3"
        app:layout_constraintTop_toBottomOf="@+id/email2_text3" />

    <TextView
        android:id="@+id/email2_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/email2_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_orgname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_orgname"
        app:layout_constraintTop_toBottomOf="@+id/editText_orgname" />

    <TextView
        android:id="@+id/organization_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/orgname"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/OrganizationSignUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/OrganizationSignUp"
        app:layout_constraintTop_toBottomOf="@+id/OrganizationSignUp" />

    <TextView
        android:id="@+id/OrganizationSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/member_signup"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/orgainzation" />

    <EditText
        android:id="@+id/editText_orgname"
        android:layout_width="352dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Org Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/organization_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/organization_name"
        app:layout_constraintTop_toBottomOf="@+id/organization_name" />
</androidx.constraintlayout.widget.ConstraintLayout>