<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <Button
        android:id="@+id/button_edit_profile2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/editProfile2"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/add_event"
        app:iconGravity="end"
        app:iconTint="@color/campus_hub_color"
        app:layout_constraintBottom_toTopOf="@+id/button_signout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_signout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/signout"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/add_event"
        app:iconGravity="end"
        app:iconTint="@color/campus_hub_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/campus_hub_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/campus_hub_image"
        android:src="@drawable/campus_hub_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/campus_hub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/roboto"
        android:lineHeight="22dp"
        android:text="@string/campus_hub_name"
        android:textColor="@color/campus_hub_color"
        android:textFontWeight="400"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/campus_hub_logo"
        app:layout_constraintStart_toEndOf="@+id/campus_hub_logo"
        app:layout_constraintTop_toTopOf="@+id/campus_hub_logo" />

    <TextView
        android:id="@+id/upcoming_events_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/upcoming_events_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campus_hub_logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/upcoming_events_recyclerview"
        android:layout_width="410dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/button_edit_profile2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcoming_events_title" />

</androidx.constraintlayout.widget.ConstraintLayout>